78-80 lesson 2.0. NEW AutoUserMapper and UserServiceImpl.