@@ -1,6 +1,7 @@
 package net.javaguides.springboot.service.impl;
 
 import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import net.javaguides.springboot.dto.UserDto;
 import net.javaguides.springboot.entity.User;
 import net.javaguides.springboot.mapper.AutoUserMapper;
@@ -15,70 +16,41 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
+    private final UserRepository userRepository;
+    private final AutoUserMapper mapper;   // <-- инжектим бин
 
-
-    private UserRepository userRepository;
-
-    private ModelMapper modelMapper;
     @Override
     public UserDto createUser(UserDto userDto) {
-        // Convert UserDto into User JPA Entity
-        // User user = UserMapper.mapToUser(userDto);
-//        User user = modelMapper.map(userDto, User.class);
-
-        User user = AutoUserMapper.MAPPER.mapToUser(userDto);
-
-        User savedUser = userRepository.save(user);
-          // Convert user jpa entity to UserDto
-       // UserDto savedUserDto = UserMapper.mapToUserDto(savedUser);
-//        UserDto savedUserDto = modelMapper.map(savedUser, UserDto.class);
-
-        UserDto savedUserDto = AutoUserMapper.MAPPER.mapToUserDto(savedUser);
-
-        return savedUserDto;
+        User user = mapper.toUser(userDto);                 // было AutoUserMapper.MAPPER...
+        User saved = userRepository.save(user);
+        return mapper.toUserDto(saved);                     // было AutoUserMapper.MAPPER...
     }
 
     @Override
     public UserDto getUserByID(Long userId) {
-        Optional<User> optionalUser = userRepository.findById(userId);
-        User user = optionalUser.get();
-        //return UserMapper.mapToUserDto(user);
-//        return modelMapper.map(user, UserDto.class);
-
-        return AutoUserMapper.MAPPER.mapToUserDto(optionalUser.get());
-
+        return null;
     }
 
     @Override
     public List<UserDto> getAllUsers() {
-        List<User> users = userRepository.findAll();
-        //return users.stream().map(UserMapper::mapToUserDto).collect(Collectors.toList());
-//        return users.stream().map((user) -> modelMapper.map(user, UserDto.class))
-//                .collect(Collectors.toList());
-
-        return users.stream().map((user) ->AutoUserMapper.MAPPER.mapToUserDto(user))
-                .collect(Collectors.toList());
-
+        return userRepository.findAll().stream()
+                .map(mapper::toUserDto)                     // было через MAPPER
+                .toList();
     }
 
     @Override
-    public UserDto updateUser(UserDto user) {
-        User existingUser = userRepository.findById(user.getId()).get();
-        existingUser.setFirstName(user.getFirstName());
-        existingUser.setLastName(user.getLastName());
-        existingUser.setEmail(user.getEmail());
-        User updatedUser = userRepository.save(existingUser);
-        //return UserMapper.mapToUserDto(updatedUser);
-//        return modelMapper.map(updatedUser, UserDto.class);
-
-        return AutoUserMapper.MAPPER.mapToUserDto(updatedUser);
+    public UserDto updateUser(UserDto dto) {
+        User existing = userRepository.findById(dto.getId()).orElseThrow();
+        existing.setFirstName(dto.getFirstName());
+        existing.setLastName(dto.getLastName());
+        existing.setEmail(dto.getEmail());
+        return mapper.toUserDto(userRepository.save(existing));
     }
 
     @Override
     public void deleteUser(Long userId) {
-        userRepository.deleteById(userId);
-    }
 
+    }
 }
